--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,18 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Cooking Stuff</title>
+    <!-- Link to favicon -->
+    <link
+      rel="icon"
+      href="https://www.google.com/s2/u/0/favicons?domain=rosan.netlify.app"
+      type="image/x-icon"
+    />
+    <!-- link to fontawesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+    />
+    <title>Cooking-Stuff</title>
   </head>
   <body>
     <div id="root"></div>
