--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     />
+    <!-- link to css file -->
+    <link rel="stylesheet" href="index.css" />
     <title>Cooking-Stuff</title>
   </head>
   <body>
